# rand

./: .travis.yml  Cargo.toml  appveyor.yml
src/: chacha.rs  isaac.rs  lib.rs
