[package]
name = "rand"
version = "0.3.17"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/rand"
documentation = "https://docs.rs/rand"
homepage = "https://github.com/rust-lang-nursery/rand"
description = """
Random number generators and other randomness functionality.
"""
keywords = ["random", "rng"]
categories = ["algorithms"]

[features]
i128_support = []
nightly = ["i128_support"]
serde-1 = ["serde", "serde_derive"]

[dependencies]
libc = "0.2"
serde = {version="1",optional=true}
serde_derive = {version="1", optional=true}

[dev-dependencies]
log = "0.3.0"
# This is for testing serde, unfortunately
# we can't specify feature-gated dev deps yet,
# see: https://github.com/rust-lang/cargo/issues/1596
bincode = "0.9"

[workspace]
members = ["rand-derive"]

[target.'cfg(target_os = "fuchsia")'.dependencies]
fuchsia-zircon = "^0.2.1"
